--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-openai
-langchain-deeplake
 PyPDF2
 python-docx
+langchain>=0.0.170
+langchain_deeplake>=0.0.11
+openai>=0.27.0
+streamlit>=1.20
