--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ langchain-openai>=0.0.6
 openai>=0.27.0
 streamlit>=1.20
 scikit-learn
+spacy
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
