--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,5 @@ streamlit>=1.20
 scikit-learn
 numpy==1.24.4
 spacy==3.7.4
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.4/en_core_web_sm-3.7.4-py3-none-any.whl
 thinc==8.2.2
