--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 pypdf2==3.0.1
 python-docx==1.2.0
-langchain>=0.0.256
-langchain_deeplake>=0.0.11
-langchain-openai>=0.0.6
-openai>=0.27.0
-streamlit>=1.20
-# scikit-learn==1.7.1
+langchain==0.3.27
+langchain_deeplake==0.1.0
+langchain-openai==0.3.29
+openai==1.99.5
+streamlit==1.48.0
 numpy==1.24.4
 spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
